--- a/husky_sheets/src/App.css
+++ b/husky_sheets/src/App.css
@@ -1,35 +1,40 @@
 .App {
     text-align: center;
-    background-color: rgb(171, 79, 238);
+    background-color: rgb(217, 170, 251);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
   
   .App-header {
     background-color: rgb(209, 93, 209);
     padding: 20px;
   }
-
-  .App-link {
-    color: #61dafb;
-  }
   
   .App-content {
     flex-grow: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
   }
 
   button {
     padding: 10px 20px;
     font-size: 16px;
+    gap: 10px;
+  }
+
+  .button-container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    margin-top: 20px;
   }
 
   .HomePage {
-    background-color: rgb(238, 79, 219);
+    background-color: rgb(237, 155, 227);
     text-align: center;
     min-height: 100vh;
     display: flex;
@@ -37,6 +42,24 @@
     align-items: center;
   }
 
-  
+  .Registration {
+    background-color: rgb(237, 155, 227);
+    text-align: center;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-  
+  .login-fields {
+    display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.name-field,
+.password-field {
+  padding: 15px;
+  font-size: 16px;
+  }
