--- a/husky_sheets/src/Registration.css
+++ b/husky_sheets/src/Registration.css
@@ -42,11 +42,22 @@
     justify-content: flex-start;
     align-items: center;
     padding: 20px;
-    margin-top: -40px;
+    margin-top: -75px;
   }
   
-  .name-field {
+  .name-field,
+  .password-field {
     padding: 15px;
     font-size: 16px;
     margin-right: 10px;
+  }
+
+  .submit-button {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px;
+    margin-top: -60px;
   }
