--- a/husky_sheets/src/HomePage.css
+++ b/husky_sheets/src/HomePage.css
@@ -8,7 +8,21 @@
 
   .Home-header {
     background-color: rgb(209, 93, 209);
-    padding: 20px;
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  .Home-header h2 {
+     position: absolute;
+     left: 50%;
+     transform: translateX(-50%);
+     margin: 0;
+  }
+
+  .Home-header button {
+     margin-left: 1200px;
   }
 
   .Home-content {
