--- a/husky_sheets/src/HomePage.css
+++ b/husky_sheets/src/HomePage.css
@@ -67,3 +67,39 @@
     width: 250px;
     padding-top: 15px;
   }
+
+  .sheets-table {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    border-collapse: collapse;
+  }
+
+  .sheets-table button {
+    padding: 8px 10px;
+    font-size: 12px;
+  }
+
+.sheets-table th, .sheets-table td {
+    padding: 12px 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+
+.sheets-table th {
+    text-align: center;
+  }
+
+.sheets-table td {
+    text-align: left;
+  }
+
+.sheets-table td:nth-child(1) {
+    text-align: left;
+    width: 10%;
+  }
+
+.sheets-table td:nth-child(2) {
+    text-align: center;
+    width: 80%;
+  }
