--- a/husky_sheets/src/HomePage.css
+++ b/husky_sheets/src/HomePage.css
@@ -10,19 +10,17 @@
     background-color: rgb(209, 93, 209);
     padding: 30px;
     display: flex;
-    justify-content: space-between;
-    position: relative;
+    align-items: center;
   }
-
+  
   .Home-header h2 {
-     position: absolute;
-     left: 50%;
-     transform: translateX(-50%);
-     margin: 0;
+    margin: 0;
+    flex-grow: 1; 
+    text-align: center; 
   }
-
+  
   .Home-header button {
-     margin-left: 1200px;
+    margin-left: 20px; 
   }
 
   .Home-content {
